// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconOutline props exists 1`] = `
<
  style={
    [
      {
        "color": "red",
        "fontFamily": "antoutline",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconOutline should create Icon element. 1`] = `
<
  style={
    [
      {
        "color": "black",
        "fontFamily": "antoutline",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconOutline should create outlineGlyphMap 1`] = `
{
  "account-book": 59905,
  "aim": 59906,
  "alert": 59907,
  "alibaba": 59908,
  "align-center": 59909,
  "align-left": 59910,
  "align-right": 59911,
  "alipay": 59913,
  "alipay-circle": 59912,
  "aliwangwang": 59914,
  "aliyun": 59915,
  "amazon": 59916,
  "android": 59917,
  "ant-cloud": 59918,
  "ant-design": 59919,
  "apartment": 59920,
  "api": 59921,
  "apple": 59922,
  "appstore": 59924,
  "appstore-add": 59923,
  "area-chart": 59925,
  "arrow-down": 59926,
  "arrow-left": 59927,
  "arrow-right": 59928,
  "arrow-up": 59929,
  "arrows-alt": 59930,
  "audio": 59932,
  "audio-muted": 59931,
  "audit": 59933,
  "backward": 59934,
  "baidu": 59935,
  "bank": 59936,
  "bar-chart": 59937,
  "barcode": 59938,
  "bars": 59939,
  "behance": 59941,
  "behance-square": 59940,
  "bell": 59942,
  "bg-colors": 59943,
  "bilibili": 59944,
  "block": 59945,
  "bold": 59946,
  "book": 59947,
  "border": 59956,
  "border-bottom": 59948,
  "border-horizontal": 59949,
  "border-inner": 59950,
  "border-left": 59951,
  "border-outer": 59952,
  "border-right": 59953,
  "border-top": 59954,
  "border-verticle": 59955,
  "borderless-table": 59957,
  "box-plot": 59958,
  "branches": 59959,
  "bug": 59960,
  "build": 59961,
  "bulb": 59962,
  "calculator": 59963,
  "calendar": 59964,
  "camera": 59965,
  "car": 59966,
  "caret-down": 59967,
  "caret-left": 59968,
  "caret-right": 59969,
  "caret-up": 59970,
  "carry-out": 59971,
  "check": 59974,
  "check-circle": 59972,
  "check-square": 59973,
  "chrome": 59975,
  "ci": 59977,
  "ci-circle": 59976,
  "clear": 59978,
  "clock-circle": 59979,
  "close": 59982,
  "close-circle": 59980,
  "close-square": 59981,
  "cloud": 59987,
  "cloud-download": 59983,
  "cloud-server": 59984,
  "cloud-sync": 59985,
  "cloud-upload": 59986,
  "cluster": 59988,
  "code": 59990,
  "code-sandbox": 59989,
  "codepen": 59992,
  "codepen-circle": 59991,
  "coffee": 59993,
  "column-height": 59994,
  "column-width": 59995,
  "comment": 59996,
  "compass": 59997,
  "compress": 59998,
  "console-sql": 59999,
  "contacts": 60000,
  "container": 60001,
  "control": 60002,
  "copy": 60003,
  "copyright": 60005,
  "copyright-circle": 60004,
  "credit-card": 60006,
  "crown": 60007,
  "customer-service": 60008,
  "dash": 60009,
  "dashboard": 60010,
  "database": 60011,
  "delete": 60014,
  "delete-column": 60012,
  "delete-row": 60013,
  "delivered-procedure": 60015,
  "deployment-unit": 60016,
  "desktop": 60017,
  "diff": 60018,
  "dingding": 60019,
  "dingtalk": 60020,
  "disconnect": 60021,
  "discord": 60022,
  "dislike": 60023,
  "docker": 60024,
  "dollar": 60026,
  "dollar-circle": 60025,
  "dot-chart": 60027,
  "dot-net": 60028,
  "double-left": 60029,
  "double-right": 60030,
  "down": 60033,
  "down-circle": 60031,
  "down-square": 60032,
  "download": 60034,
  "drag": 60035,
  "dribbble": 60037,
  "dribbble-square": 60036,
  "dropbox": 60038,
  "edit": 60039,
  "ellipsis": 60040,
  "enter": 60041,
  "environment": 60042,
  "euro": 60044,
  "euro-circle": 60043,
  "exception": 60045,
  "exclamation": 60047,
  "exclamation-circle": 60046,
  "expand": 60049,
  "expand-alt": 60048,
  "experiment": 60050,
  "export": 60051,
  "eye": 60053,
  "eye-invisible": 60052,
  "facebook": 60054,
  "fall": 60055,
  "fast-backward": 60056,
  "fast-forward": 60057,
  "field-binary": 60058,
  "field-number": 60059,
  "field-string": 60060,
  "field-time": 60061,
  "file": 60079,
  "file-add": 60062,
  "file-done": 60063,
  "file-excel": 60064,
  "file-exclamation": 60065,
  "file-gif": 60066,
  "file-image": 60067,
  "file-jpg": 60068,
  "file-markdown": 60069,
  "file-pdf": 60070,
  "file-ppt": 60071,
  "file-protect": 60072,
  "file-search": 60073,
  "file-sync": 60074,
  "file-text": 60075,
  "file-unknown": 60076,
  "file-word": 60077,
  "file-zip": 60078,
  "filter": 60080,
  "fire": 60081,
  "flag": 60082,
  "folder": 60086,
  "folder-add": 60083,
  "folder-open": 60084,
  "folder-view": 60085,
  "font-colors": 60087,
  "font-size": 60088,
  "fork": 60089,
  "form": 60090,
  "format-painter": 60091,
  "forward": 60092,
  "frown": 60093,
  "fullscreen": 60095,
  "fullscreen-exit": 60094,
  "function": 60096,
  "fund": 60099,
  "fund-projection-screen": 60097,
  "fund-view": 60098,
  "funnel-plot": 60100,
  "gateway": 60101,
  "gif": 60102,
  "gift": 60103,
  "github": 60104,
  "gitlab": 60105,
  "global": 60106,
  "gold": 60107,
  "google": 60109,
  "google-plus": 60108,
  "group": 60110,
  "harmony-o-s": 60111,
  "hdd": 60112,
  "heart": 60113,
  "heat-map": 60114,
  "highlight": 60115,
  "history": 60116,
  "holder": 60117,
  "home": 60118,
  "hourglass": 60119,
  "html5": 60120,
  "idcard": 60121,
  "ie": 60122,
  "import": 60123,
  "inbox": 60124,
  "info": 60126,
  "info-circle": 60125,
  "insert-row-above": 60127,
  "insert-row-below": 60128,
  "insert-row-left": 60129,
  "insert-row-right": 60130,
  "instagram": 60131,
  "insurance": 60132,
  "interaction": 60133,
  "issues-close": 60134,
  "italic": 60135,
  "java": 60137,
  "java-script": 60136,
  "key": 60138,
  "kubernetes": 60139,
  "laptop": 60140,
  "layout": 60141,
  "left": 60144,
  "left-circle": 60142,
  "left-square": 60143,
  "like": 60145,
  "line": 60148,
  "line-chart": 60146,
  "line-height": 60147,
  "link": 60149,
  "linkedin": 60150,
  "linux": 60151,
  "loading": 60153,
  "loading-3-quarters": 60152,
  "lock": 60154,
  "login": 60155,
  "logout": 60156,
  "mac-command": 60157,
  "mail": 60158,
  "man": 60159,
  "medicine-box": 60160,
  "medium": 60162,
  "medium-workmark": 60161,
  "meh": 60163,
  "menu": 60166,
  "menu-fold": 60164,
  "menu-unfold": 60165,
  "merge": 60168,
  "merge-cells": 60167,
  "message": 60169,
  "minus": 60172,
  "minus-circle": 60170,
  "minus-square": 60171,
  "mobile": 60173,
  "money-collect": 60174,
  "monitor": 60175,
  "moon": 60176,
  "more": 60177,
  "muted": 60178,
  "node-collapse": 60179,
  "node-expand": 60180,
  "node-index": 60181,
  "notification": 60182,
  "number": 60183,
  "one-to-one": 60184,
  "open-a-i": 60185,
  "ordered-list": 60186,
  "paper-clip": 60187,
  "partition": 60188,
  "pause": 60190,
  "pause-circle": 60189,
  "pay-circle": 60191,
  "percentage": 60192,
  "phone": 60193,
  "pic-center": 60194,
  "pic-left": 60195,
  "pic-right": 60196,
  "picture": 60197,
  "pie-chart": 60198,
  "pinterest": 60199,
  "play-circle": 60200,
  "play-square": 60201,
  "plus": 60204,
  "plus-circle": 60202,
  "plus-square": 60203,
  "pound": 60206,
  "pound-circle": 60205,
  "poweroff": 60207,
  "printer": 60208,
  "product": 60209,
  "profile": 60210,
  "project": 60211,
  "property-safety": 60212,
  "pull-request": 60213,
  "pushpin": 60214,
  "python": 60215,
  "qq": 60216,
  "qrcode": 60217,
  "question": 60219,
  "question-circle": 60218,
  "radar-chart": 60220,
  "radius-bottomleft": 60221,
  "radius-bottomright": 60222,
  "radius-setting": 60223,
  "radius-upleft": 60224,
  "radius-upright": 60225,
  "read": 60226,
  "reconciliation": 60227,
  "red-envelope": 60228,
  "reddit": 60229,
  "redo": 60230,
  "reload": 60231,
  "rest": 60232,
  "retweet": 60233,
  "right": 60236,
  "right-circle": 60234,
  "right-square": 60235,
  "rise": 60237,
  "robot": 60238,
  "rocket": 60239,
  "rollback": 60240,
  "rotate-left": 60241,
  "rotate-right": 60242,
  "ruby": 60243,
  "safety": 60245,
  "safety-certificate": 60244,
  "save": 60246,
  "scan": 60247,
  "schedule": 60248,
  "scissor": 60249,
  "search": 60250,
  "security-scan": 60251,
  "select": 60252,
  "send": 60253,
  "setting": 60254,
  "shake": 60255,
  "share-alt": 60256,
  "shop": 60257,
  "shopping": 60259,
  "shopping-cart": 60258,
  "shrink": 60260,
  "signature": 60261,
  "sisternode": 60262,
  "sketch": 60263,
  "skin": 60264,
  "skype": 60265,
  "slack": 60267,
  "slack-square": 60266,
  "sliders": 60268,
  "small-dash": 60269,
  "smile": 60270,
  "snippets": 60271,
  "solution": 60272,
  "sort-ascending": 60273,
  "sort-descending": 60274,
  "sound": 60275,
  "split-cells": 60276,
  "spotify": 60277,
  "star": 60278,
  "step-backward": 60279,
  "step-forward": 60280,
  "stock": 60281,
  "stop": 60282,
  "strikethrough": 60283,
  "subnode": 60284,
  "sun": 60285,
  "swap": 60288,
  "swap-left": 60286,
  "swap-right": 60287,
  "switcher": 60289,
  "sync": 60290,
  "table": 60291,
  "tablet": 60292,
  "tag": 60293,
  "tags": 60294,
  "taobao": 60296,
  "taobao-circle": 60295,
  "team": 60297,
  "thunderbolt": 60298,
  "tik-tok": 60299,
  "to-top": 60300,
  "tool": 60301,
  "trademark": 60303,
  "trademark-circle": 60302,
  "transaction": 60304,
  "translation": 60305,
  "trophy": 60306,
  "truck": 60307,
  "twitch": 60308,
  "twitter": 60309,
  "underline": 60310,
  "undo": 60311,
  "ungroup": 60312,
  "unlock": 60313,
  "unordered-list": 60314,
  "up": 60317,
  "up-circle": 60315,
  "up-square": 60316,
  "upload": 60318,
  "usb": 60319,
  "user": 60323,
  "user-add": 60320,
  "user-delete": 60321,
  "user-switch": 60322,
  "usergroup-add": 60324,
  "usergroup-delete": 60325,
  "verified": 60326,
  "vertical-align-bottom": 60327,
  "vertical-align-middle": 60328,
  "vertical-align-top": 60329,
  "vertical-left": 60330,
  "vertical-right": 60331,
  "video-camera": 60333,
  "video-camera-add": 60332,
  "wallet": 60334,
  "warning": 60335,
  "wechat": 60337,
  "wechat-work": 60336,
  "weibo": 60340,
  "weibo-circle": 60338,
  "weibo-square": 60339,
  "whats-app": 60341,
  "wifi": 60342,
  "windows": 60343,
  "woman": 60344,
  "x": 60345,
  "yahoo": 60346,
  "youtube": 60347,
  "yuque": 60348,
  "zhihu": 60349,
  "zoom-in": 60350,
  "zoom-out": 60351,
}
`;
